# django-select3

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  apps.py  pyproject.toml  urls.py  views.py  widgets.py
assets/: select3-input.css
static/select3/: select3-bundle.css  select3-widgets.js
templates/select3/: demo.html
templates/select3/widgets/: combobox.html  combobox_ajax.html  multiselect.html  multiselect_ajax.html
tests/: test_widgets.py  urls.py
